Horizontal scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-weight: normal;
+    overflow-x:hidden;
     color: hsl(0, 0%, 90%);
     max-width: 100vw;
 }
